# projetos_estudos

./: .gitignore  README.md  pyproject.toml
projetos_estudos/projeto01/: app.py  funcoes.py  projeto.md
