[project]
name = "projetos-estudos"
version = "0.1.0"
description = ""
authors = [
    {name = "Matheus",email = "mth_p_amorim+git@hotmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]

[tool.poetry]
packages = [{include = "projetos_estudos", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
